--- a/bootstrap portfolio build/index.html
+++ b/bootstrap portfolio build/index.html
@@ -26,7 +26,7 @@
 
   <!-- Add your site or application content here -->
  
-    <button class="btn btn-primary">Hello</button>
+    <button class="btn btn-secondary">Hello</button>
  
  
  
